--- a/ClassTask25/appsettings.json
+++ b/ClassTask25/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Server=DESKTOP-UTD7S5H;database=ClassTask25;Trusted_connection=true;Integrated security=true;Encrypt=false"
+    "Default": "Server=DESKTOP-0HF9IVP;database=ClassTask25;Trusted_connection=true;Integrated security=true;Encrypt=false"
 
   },
 
